test-legacy/tests/compiler/from_to/to_failure_extension_bz2.txt
error: no known format for extension `.extension`
 --> tests/compiler/from_to/to_failure_extension_bz2.tql:5:12
  |
5 | to "failure.extension.bz2"
  |            ^^^^^^^^^^ 
  |
  = note: supported extensions for format deduction: `arrow`, `csv`, `feather`, `json`, `jsonl`, `ndjson`, `parquet`, `pcap`, `ssv`, `tsv`, `yaml`
  = hint: you can pass a pipeline to handle compression and format
  = docs: https://docs.tenzir.com/reference/operators/to
